--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/content": "^2.13.4",
     "@vercel/edge": "^1.2.1",
+    "embla-carousel": "^8.6.0",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
@@ -20,5 +21,6 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-vue": "^8.5.2",
     "sass-embedded": "^1.83.0"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
